--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
@@ -28,9 +28,9 @@
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown">My Projects</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <p class="nav-title">UI / UX Design</p>
-            <a class="dropdown-item center" href="responsive_project.html">Restaurant Redesign</a>
-            <a class="dropdown-item center" href="dev_project.html">React Stocks</a>
-            <a class="dropdown-item center" href="ab_testing.html">A / B Testing</a>
+            <a class="dropdown-item center" href="html/responsive_project.html">Restaurant Redesign</a>
+            <a class="dropdown-item center" href="html/dev_project.html">React Stocks</a>
+            <a class="dropdown-item center" href="html/ab_testing.html">A / B Testing</a>
             <p class="nav-title">Lighting Design</p>
             <a class="dropdown-item center text-wrap" href="sonic.html">The Sonic Life of a Giant Tortoise</a>
             <p class="nav-title">Film (coming soon)</p>
@@ -48,7 +48,7 @@
             <h1>I am a creative technologist.</h1>
           </div>
           <div class="col align-self-center">
-            <img id="main-img" class="hvr-grow-shadow" src="../img/home/john.jpg"/>
+            <img id="main-img" class="hvr-grow-shadow" src="img/home/john.jpg"/>
           </div>
         </div>
 <!--        <div class="row justify-content-md-center">-->
@@ -71,19 +71,19 @@
       <div class="d-flex flex-wrap justify-content-center">
           <div>
             <a href="responsive_project.html">
-              <img class="proj-img hvr-grow-shadow" src="../img/home/redesign.png"/>
+              <img class="proj-img hvr-grow-shadow" src="img/home/redesign.png"/>
             </a>
             <p class="center">Restaurant Redesign</p>
           </div>
           <div>
             <a href="dev_project.html">
-              <img class="proj-img hvr-grow-shadow" src="../img/home/react.png"/>
+              <img class="proj-img hvr-grow-shadow" src="img/home/react.png"/>
             </a>
             <p class="center">React Stocks</p>
           </div>
           <div>
             <a href="ab_testing.html">
-              <img class="proj-img hvr-grow-shadow" src="../img/home/ab.jpg"/>
+              <img class="proj-img hvr-grow-shadow" src="img/home/ab.jpg"/>
             </a>
             <p class="center">A/B Testing</p>
           </div>
@@ -95,16 +95,16 @@
     <div class="d-flex flex-wrap justify-content-center">
       <div>
         <a href="sonic.html">
-          <img class="proj-img hvr-grow-shadow" src="../img/home/sonic.jpg"/>
+          <img class="proj-img hvr-grow-shadow" src="img/home/sonic.jpg"/>
         </a>
         <p class="center"><i>The Sonic Life of a Giant Tortoise</i></p>
       </div>
       <div>
-        <img class="proj-img" src="../img/home/fusion.jpeg"/>
+        <img class="proj-img" src="img/home/fusion.jpeg"/>
         <p class="center"><i>coming soon</i></p>
       </div>
       <div>
-        <img class="proj-img" src="../img/home/mezcla.jpeg"/>
+        <img class="proj-img" src="img/home/mezcla.jpeg"/>
         <p class="center"><i>coming soon</i></p>
       </div>
     </div>
@@ -114,11 +114,11 @@
 
     <div class="d-flex flex-wrap justify-content-center">
       <div>
-        <img class="proj-img" src="../img/home/blueroom.png"/>
+        <img class="proj-img" src="img/home/blueroom.png"/>
         <p class="center"><i>coming soon</i></p>
       </div>
       <div>
-        <img class="proj-img" src="../img/home/trumpet.jpg"/>
+        <img class="proj-img" src="img/home/trumpet.jpg"/>
         <p class="center"><i>coming soon</i></p>
       </div>
     </div>
