--- a/html/ab_testing.html
+++ b/html/ab_testing.html
@@ -20,7 +20,7 @@
   </head>
   <body>
       <div class="d-flex flex-wrap justify-content-between">
-          <a class="jd" href="home.html">
+          <a class="jd" href="../home.html">
               <h3><b>John Krasinski</b></h3>
           </a>
           <ul class="sticky-top nav justify-content-end">
@@ -35,7 +35,7 @@
                       <a class="dropdown-item center text-wrap" href="sonic.html">The Sonic Life of a Giant Tortoise</a>
                       <p class="nav-title">Film (coming soon)</p>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item center text-wrap" href="home.html">Home</a>
+                      <a class="dropdown-item center text-wrap" href="../home.html">Home</a>
                   </div>
               </li>
           </ul>
@@ -146,7 +146,7 @@
 
       <footer style="margin-top: 2vw" class="page-footer font-small blue">
           <div class="footer-copyright text-center py-3">Thanks for reading!
-              <a href="home.html">See more projects</a>
+              <a href="../html">See more projects</a>
           </div>
       </footer>
   </body>
