--- a/html/sonic.html
+++ b/html/sonic.html
@@ -19,7 +19,7 @@
   <body id="home">
 
     <div class="d-flex flex-wrap justify-content-between">
-      <a class="jd" href="home.html">
+      <a class="jd" href="../home.html">
         <h3><b>John Krasinski</b></h3>
       </a>
       <ul class="sticky-top nav justify-content-end">
@@ -34,7 +34,7 @@
             <a class="dropdown-item center text-wrap" href="sonic.html">The Sonic Life of a Giant Tortoise</a>
             <p class="nav-title">Film (coming soon)</p>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item center text-wrap" href="home.html">Home</a>
+            <a class="dropdown-item center text-wrap" href="../home.html">Home</a>
           </div>
         </li>
       </ul>
@@ -105,7 +105,7 @@
     </div>
     <footer style="margin-top: 2vw" class="page-footer font-small blue">
       <div class="footer-copyright text-center py-3">Thanks for reading!
-        <a href="home.html">See more projects</a>
+        <a href="../home.html">See more projects</a>
       </div>
     </footer>
 
