--- a/home.html
+++ b/home.html
@@ -70,19 +70,19 @@
 
       <div class="d-flex flex-wrap justify-content-center">
           <div>
-            <a href="responsive_project.html">
+            <a href="html/responsive_project.html">
               <img class="proj-img hvr-grow-shadow" src="img/home/redesign.png"/>
             </a>
             <p class="center">Restaurant Redesign</p>
           </div>
           <div>
-            <a href="dev_project.html">
+            <a href="html/dev_project.html">
               <img class="proj-img hvr-grow-shadow" src="img/home/react.png"/>
             </a>
             <p class="center">React Stocks</p>
           </div>
           <div>
-            <a href="ab_testing.html">
+            <a href="html/ab_testing.html">
               <img class="proj-img hvr-grow-shadow" src="img/home/ab.jpg"/>
             </a>
             <p class="center">A/B Testing</p>
@@ -94,7 +94,7 @@
 
     <div class="d-flex flex-wrap justify-content-center">
       <div>
-        <a href="sonic.html">
+        <a href="html/sonic.html">
           <img class="proj-img hvr-grow-shadow" src="img/home/sonic.jpg"/>
         </a>
         <p class="center"><i>The Sonic Life of a Giant Tortoise</i></p>
