--- a/home.html
+++ b/home.html
@@ -36,6 +36,7 @@
             <p class="nav-title">Film (coming soon)</p>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item center text-wrap" href="home.html">Home</a>
+            <a class="dropdown-item center text-wrap" href="html/about_me.html">About Me</a>
           </div>
         </li>
       </ul>
@@ -48,20 +49,11 @@
             <h1>I am a creative technologist.</h1>
           </div>
           <div class="col align-self-center">
-            <img id="main-img" class="hvr-grow-shadow" src="img/home/john.jpg"/>
+            <a href="html/about_me.html">
+              <img id="main-img" class="hvr-grow-shadow" src="img/home/john.jpg"/>
+            </a>
           </div>
         </div>
-<!--        <div class="row justify-content-md-center">-->
-<!--          <div class="col">-->
-<!--            <a type="button" href="#UI" class="btn btn-link">UI / UX Design</a>-->
-<!--          </div>-->
-<!--          <div class="col">-->
-<!--            <a type="button" href="#lighting" class="btn btn-link">Lighting Design</a>-->
-<!--          </div>-->
-<!--          <div class="col">-->
-<!--            <a type="button" href="#film" class="btn btn-link">Film</a>-->
-<!--          </div>-->
-<!--        </div>-->
       </div>
     </div>
 
@@ -100,12 +92,16 @@
         <p class="center"><i>The Sonic Life of a Giant Tortoise</i></p>
       </div>
       <div>
-        <img class="proj-img" src="img/home/fusion.jpeg"/>
-        <p class="center"><i>coming soon</i></p>
+        <a href="html/coming_soon.html">
+          <img class="proj-img hvr-grow-shadow" src="img/home/fusion.jpeg"/>
+        </a>
+        <p class="center"><i>Fusion Dance Company</i></p>
       </div>
       <div>
-        <img class="proj-img" src="img/home/mezcla.jpeg"/>
-        <p class="center"><i>coming soon</i></p>
+        <a href="html/coming_soon.html">
+          <img class="proj-img hvr-grow-shadow" src="img/home/mezcla.jpeg"/>
+        </a>
+        <p class="center"><i>Mezcla Dance Company</i></p>
       </div>
     </div>
 
@@ -114,12 +110,16 @@
 
     <div class="d-flex flex-wrap justify-content-center">
       <div>
-        <img class="proj-img" src="img/home/blueroom.png"/>
-        <p class="center"><i>coming soon</i></p>
+        <a href="html/coming_soon.html">
+          <img class="proj-img hvr-grow-shadow" src="img/home/blueroom.png"/>
+        </a>
+        <p class="center"><i>Boys in the Blue Room</i></p>
       </div>
       <div>
-        <img class="proj-img" src="img/home/trumpet.jpg"/>
-        <p class="center"><i>coming soon</i></p>
+        <a href="html/coming_soon.html">
+          <img class="proj-img hvr-grow-shadow" src="img/home/trumpet.jpg"/>
+        </a>
+        <p class="center"><i>The Trumpet Player</i></p>
       </div>
     </div>
 
