--- a/html/responsive_project.html
+++ b/html/responsive_project.html
@@ -36,13 +36,14 @@
                       <p class="nav-title">Film (coming soon)</p>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item center text-wrap" href="../home.html">Home</a>
+                      <a class="dropdown-item center text-wrap" href="about_me.html">About Me</a>
                   </div>
               </li>
           </ul>
       </div>
 
       <div class="main-section">
-        <h1 class="center"><mark>Responsive Redesign</mark></h1>
+        <h1 class="center"><mark>Restaurant Redesign</mark></h1>
         <p class="center">In this project, I utilized <b>iterative design</b> to reimagine a restaurant&#39s website. My approach started
         with <b>assessing the current site</b>, looking closely at where the design hindered the user&#39s interactions or were
         inaccessible. Next, I made a <b>low-fidelity prototype</b> to sketch out the layout, then filled in the aesthetics
