--- a/html/sonic.html
+++ b/html/sonic.html
@@ -35,6 +35,7 @@
             <p class="nav-title">Film (coming soon)</p>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item center text-wrap" href="../home.html">Home</a>
+            <a class="dropdown-item center text-wrap" href="about_me.html">About Me</a>
           </div>
         </li>
       </ul>
