--- a/html/responsive_project.html
+++ b/html/responsive_project.html
@@ -45,7 +45,7 @@
       <div class="main-section">
         <h1 class="center"><mark>Restaurant Redesign</mark></h1>
         <p class="center">In this project, I utilized <b>iterative design</b> to reimagine a restaurant&#39s website. My approach started
-        with <b>assessing the current site</b>, looking closely at where the design hindered the user&#39s interactions or were
+        with <b>assessing the current site</b>, looking closely at where the design hindered the user&#39s interactions or where they were
         inaccessible. Next, I made a <b>low-fidelity prototype</b> to sketch out the layout, then filled in the aesthetics
         with my <b>high-fidelity prototype.</b></p>
 
