--- a/html/sonic.html
+++ b/html/sonic.html
@@ -49,8 +49,8 @@
       <p class="center">This experimental piece discusses life, death, travel, love, technology, and more through direct conversation
         with the audience. As the play progresses, the audience dives deeper into the unconscious of an individual, who
         is played by the 9 person cast. Lighting for this production sought to display everyday places such as an
-        office, subway, or classroom but in an abstract dreamlike manner. The circuit board gobo/patter appeared often
-        throughout the play to show humankind's reliance on technology; a theme that comes to fruition at the end of
+        office, subway, or classroom but in an abstract dreamlike manner. The circuit board gobo/pattern appeared often
+        throughout the performance to show humankind's reliance on technology; a theme that comes to fruition at the end of
         the play. </p>
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
