--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
       <div class="container">
         <div class="row">
           <div class="col align-self-center">
-            <h1>I am a creative technologist.</h1>
+            <h1>I am a creative technologist!</h1>
           </div>
           <div class="col align-self-center">
             <a href="html/about_me.html">
