--- a/html/ab_testing.html
+++ b/html/ab_testing.html
@@ -45,7 +45,7 @@
       <div class="main-section">
         <h1 class="center"><mark>A/B Testing</mark></h1>
 
-        <p>In this project, I applied A / B testing to determine which website design aided in user efficiency. Starting
+        <p class="center">In this project, I applied A / B testing to determine which website design aided in user efficiency. Starting
         with the design idea I wanted to test, I focused on the layout to see if a more hierarchical structure allowed
         users to checkout faster. I created a website that randomly swapped between the two designs and recorded
         user data from it. Lastly, I ran statistical tests to see if I could reject my null hypothesis.</p>
